# rust-grpc

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  build.rs  flake.nix  lint.sh  news.proto  posts.proto  users.proto
.github/workflows/: ci.yml
shuttle-rust-grpc/: Cargo.toml
src/: main.rs  server.rs
tests/: ci.rs
