[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14.28",features = ["full"]}
tokio = {version = "1.35.1",features = ["full"]}
tonic = "0.10.2"
tonic-reflection = "0.11.0"
prost = "0.12.3"
prost-types = "0.12.3"
tower = "0.4.13"
hyper-util = {version = "0.1.3",features = ["tokio"]}
http-body-util = "0.1.0"
anyhow = "1.0.79"

[build-dependencies]
tonic-build = "0.10.2"
