[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.31", features = ["full"] }
tokio = { version = "1.41.1", features = ["full"] }
tonic = "0.11.0"
tonic-reflection = "0.11.0"
prost = "0.12.6"
prost-types = "0.12.6"
tower = "0.4.13"
hyper-util = { version = "0.1.10", features = ["tokio"] }
http-body-util = "0.1.2"
anyhow = "1.0.93"
once_cell = "1.20.2"
tonic-tracing-opentelemetry = "0.18.2"
opentelemetry = { version = "0.22.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.22.1", features = ["trace", "rt-tokio"] }
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry-http = "0.11.1"
opentelemetry-otlp = { version = "0.15.0", features = [
  "trace",
  # required to make grpc requests
  "tls-roots",
] }
tracing = "0.1.41"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3.18"

[dev-dependencies]
gh-workflow = "*"

[build-dependencies]
tonic-build = "0.11.0"
gh-workflow = "*"
