[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.39", features = ["full"] }
tokio = { version = "1.42.0", features = ["full"] }
tonic = "0.14.0"
tonic-reflection = "0.14.0"
prost = "0.12.3"
prost-types = "0.12.3"
tower = "0.4.13"
hyper-util = { version = "0.1.3", features = ["tokio"] }
http-body-util = "0.1.0"
anyhow = "1.0.82"
once_cell = "1.19.0"
tonic-tracing-opentelemetry = "0.20.0"
opentelemetry = { version = "0.28.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.28.0", features = ["trace", "rt-tokio"] }
opentelemetry-semantic-conventions = "0.24.0"
opentelemetry-http = "0.14.0"
opentelemetry-otlp = { version = "0.19.0", features = [
  "trace",
  # required to make grpc requests
  "tls",
] }
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.5.0"
shuttle-runtime = "0.49.0"
shuttle-axum = "0.49.0"
async-trait = "0.1.66"

[build-dependencies]
gh-workflow = "0.5.1"
tonic-build = "0.14.0"

[dev-dependencies]
gh-workflow = "0.5.1"
